k8s/base/theposterdb/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: theposterdb-ingress
  namespace: media
spec:
  ingressClassName: nginx
  rules:
  - host: theposterdb.local
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: theposterdb
            port:
              number: 80
